# Data-Science-For-Beginners-from-scratch-SENATOROV

./: .gitignore  log.ipynb  pyproject.toml  quiz.ipynb  quiz.py
.github/: opensource.py  quiz.py
git/: stash.py
python/: commit.ipy  cpython.py  issues.py  oop.ipynb  oop.py  venv.py
python/clean-code/: chapter_4_choosing_variable_names.ipynb  chapter_4_choosing_variable_names.py
python/makarov/: chapter_01_variables.ipynb  chapter_01_variables.py  chapter_02_data_types.ipynb  chapter_02_data_types.py  chapter_03_if_loops.ipynb  chapter_03_if_loops.py  chapter_04_files_kaggle_titanic.ipynb  chapter_04_files_kaggle_titanic.py  chapter_05_datetime.py  chapter_06_functions.ipynb  chapter_06_functions.py  chapter_07_classes.ipynb  chapter_07_classes.py  chapter_08_lists_tuples_sets.ipynb  chapter_08_lists_tuples_sets.py  chapter_09_dictionaries.ipynb  chapter_09_dictionaries.py  chapter_10_numpy.ipynb  chapter_10_numpy.py  chapter_11_pandas.ipynb  chapter_11_pandas.py  chapter_15_iterators.ipynb  chapter_15_iterators.py  chapter_16_decorators.ipynb  chapter_16_decorators.py
