[tool.jupytext]
formats = "ipynb,py:light"
cell_metadata_filter = "-all"
notebook_metadata_filter = "-all"

[project]
name = "data-science-for-beginners-from-scratch-senatorov"
version = "0.1.0"
description = ""
authors = [
    {name = "lessWronger",email = "belskyi1798@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
